crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__enum_namespace_on_type_with_opaque_proxy_variants.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Event, UserId).unwrap()"
---
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
? namespace:
    NAMED: events
  name: Event
: ENUM:
    - 0:
        User:
          - NEWTYPE:
              TYPENAME:
                namespace:
                  NAMED: events
                name: UserId
          - []
      1:
        SignIn:
          - STRUCT:
              - user_id:
                  - TYPENAME:
                      namespace:
                        NAMED: events
                      name: UserId
                  - []
          - []
    - EXTERNAL
    - []
? namespace:
    NAMED: events
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
