crates/facet_generate/src/reflection/snapshots/facet_generate__reflection__opaque_proxy_combinations__enum_newtype_variant_option_opaque_proxy.snap
---
source: crates/facet_generate/src/reflection/opaque_proxy_combinations.rs
expression: "reflect!(Event, UserId, OptionalUserId).unwrap()"
---
? namespace: ROOT
  name: Event
: ENUM:
    - 0:
        MaybeUser:
          - NEWTYPE:
              TYPENAME:
                namespace: ROOT
                name: OptionalUserId
          - []
    - EXTERNAL
    - []
? namespace: ROOT
  name: OptionalUserId
: NEWTYPESTRUCT:
    - OPTION:
        TYPENAME:
          namespace: ROOT
          name: UserId
    - - Proxy for optional opaque lattice IDs.
? namespace: ROOT
  name: UserId
: NEWTYPESTRUCT:
    - STR
    - - "Domain ID with `Facet`. Wire anchor for typegen."
